--- a/public/css/master.css
+++ b/public/css/master.css
@@ -39,6 +39,10 @@
     margin-top: 5px;
 }
 
+.logo-box img {
+    height: 30px;
+}
+
 .search-box {
     position: absolute;
     left: 50%;
@@ -108,119 +112,6 @@
 
 
 
-#profile {
-    position: absolute;
-    width: 70%;
-    padding: 5px 0;
-    margin-top: 60px;
-    z-index: 1;
-}
-
-.user-container {
-    background-color: #fafafa;
-    display: flex;
-    padding: 10px 50px;
-    border-bottom: 1px solid #dfdfdf;
-}
-
-.user-container .user-avatar {
-    width: 155px;
-    height: 155px;
-    border-radius: 75px;
-    border: 2px solid rgb(56, 56, 56);
-}
-
-.user-container .user-name-field {
-    display: flex;
-}
-
-.user-container .user-name-field .modify {
-    margin-left: 10px;
-    color: rgb(56, 56, 56);
-    padding: 8px;
-}
-
-.user-container .user-name-field .modify:hover {
-    background-color: #dfdfdf;
-    border-radius: 8px;
-}
-
-a.logo-box img {
-    width: 103px;
-}
-
-.user-container .folow-detail {
-    padding: 10px 0px;
-}
-
-.user-container .folow-detail a {
-    text-decoration: none;
-    color: black;
-    padding: 0 10px;
-}
-
-.user-container .user-info-container {
-    width: 100%;
-    margin: 0 30px 0 100px;
-}
-
-.user-container .user-describe {
-    padding: 10px;
-}
-
-/* post section */
-
-#post-container {
-    margin-top: 250px;
-    position: absolute;
-    width: 70%;
-    padding: 5px 0;
-    z-index: 1;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-#post-container .post {
-    position: relative;
-    text-align: center;
-    width: 100%;
-    border: none;
-    height: 100%;
-    padding: 3%;
-    color: #f5f5f5;
-}
-
-.post-img {
-    width: 100%;
-    height: 100%;
-}
-
-.post .likes {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    visibility: hidden;
-}
-
-.post:hover .likes {
-    visibility: visible;
-}
-
-.post:hover img {
-    opacity: 0.8;
-}
-
-.post:hover .heart-icon {
-    transition-duration: 0.5s;
-    font-size: 30px;
-}
-
-.post .heart-icon {
-    font-size: 20px;
-    color: #f5f5f5;
-}
-
 
 
 
@@ -274,18 +165,6 @@ a.logo-box img {
 }
 
 
-
-
-button#buy-ticket {
-    padding: 8px;
-    color: rgb(17, 17, 17);
-    font-size: 16px;
-    display: block;
-}
-
-button#buy-ticket:hover {
-    background-color: #ccc;
-}
 
 
 @keyframes modalFadeIn {
