--- a/public/css/home.css
+++ b/public/css/home.css
@@ -103,7 +103,7 @@
 
 .info {
     width: 100%;
-    height: 60px;
+    height: 9%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -141,7 +141,7 @@
 
 .post-image {
     width: 100%;
-    height: 500px;
+    height: 75%;
     object-fit: cover;
 }
 
