--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -94,7 +94,7 @@ a.logo-box img {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-#post-container .post {
+#post-container .user-post {
     position: relative;
     text-align: center;
     width: 100%;
@@ -119,7 +119,7 @@ a.logo-box img {
     height: 100%;
 }
 
-.post .likes {
+.user-post .likes {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -127,26 +127,26 @@ a.logo-box img {
     visibility: hidden;
 }
 
-.post:hover .likes {
+.user-post:hover .likes {
     visibility: visible;
 }
 
-.post:hover img {
+.user-post:hover img {
     opacity: 0.5;
 }
 
 
-.post:hover .heart-icon {
+.user-post:hover .heart-icon {
     transition-duration: 0.5s;
     font-size: 30px;
 }
 
-.post .heart-icon {
+.user-post .heart-icon {
     font-size: 20px;
     color: #ff607c;
 }
 
-.post .like-count {
+.user-post .like-count {
     color: #ff607c;
     font-weight: bold;
 }
